@@ -1,9 +1,9 @@
-# Copyright (c) 2021 Patricio Cubillos
-# puppies is open-source software under the MIT license (see LICENSE)
+# Copyright (c) 2021-2024 Patricio Cubillos
+# puppies is open-source software under the GNU GPL-2.0 license (see LICENSE)
 
 __all__ = [
     'bliss',
-    ]
+]
 
 import sys
 import numpy as np
@@ -50,21 +50,24 @@ class bliss():
           self.flux, self.model, self.knotpts,
           self.knotsize, self.kploc, self.binloc,
           self.ydist, self.xdist, self.xsize,
-          retmap, retbinstd)
+          retmap, retbinstd,
+      )
       # If requested, put extra variables in self:
       if retmap and retbinstd:
           ipflux, self.blissmap, self.binstd = ipflux
       elif retmap:
           ipflux, self.blissmap = ipflux
       elif retbinstd:
-          ipflux, self.binstd   = ipflux
+          ipflux, self.binstd = ipflux
 
       self.ipflux = ipflux
       return ipflux
 
 
-  def setup(self, flux=None, y=None, x=None, ystep=None, xstep=None,
-      minpt=1, mask=None, verbose=True, obj=None):
+  def setup(
+      self, flux=None, y=None, x=None, ystep=None, xstep=None,
+      minpt=1, mask=None, verbose=True, obj=None,
+  ):
       """
       Set up the BLISS map variables.
 
