@@ -1,17 +1,22 @@
-# Copyright (c) 2021-2022 Patricio Cubillos
+# Copyright (c) 2021-2024 Patricio Cubillos
 # puppies is open-source software under the GNU GPL-2.0 license (see LICENSE)
 
 __all__ = [
     'yx',
     'background',
     'rawflux',
+    'lightcurve',
 ]
 
+import os
+
 import matplotlib.pyplot as plt
+from matplotlib.colors import to_rgba
 import numpy as np
 import mc3
 
 from .. import stats as ps
+from ..models import bliss
 
 
 def yx(y, x, phase=None, good=None, pos=None, folder=None):
@@ -50,8 +55,6 @@ def yx(y, x, phase=None, good=None, pos=None, folder=None):
         ipos  = pos == j
         igood = ipos &  good
         ibad  = ipos & ~good
-        yy = y[ipos]
-        xx = x[ipos]
 
         # X-axis' range:
         dt = np.ptp(phase[igood])
@@ -95,10 +98,10 @@ def yx(y, x, phase=None, good=None, pos=None, folder=None):
         ax = plt.subplot(212)
         plt.ylim(xran)
         if folder is not None:
-            plt.savefig(folder + "/yx_zoom{:s}.png".format(suffix))
+            plt.savefig(f"{folder}/yx_zoom{suffix}.png")
 
 
-def background(skylev, phase=None, good=None, folder=None, units='units'):
+def background(skylev, phase, good=None, folder=None, units='units'):
     """
     Make sky background plot.
 
@@ -115,9 +118,6 @@ def background(skylev, phase=None, good=None, folder=None, units='units'):
     units: String
        Flux units.
     """
-    if phase is None:
-        phase = np.arange(len(y), int)
-
     # X-axis' range:
     dt = np.ptp(phase[good])
     xran = np.amin(phase[good]) - 0.025*dt, np.amax(phase[good]) + 0.025*dt
@@ -139,8 +139,10 @@ def background(skylev, phase=None, good=None, folder=None, units='units'):
         plt.savefig(f"{folder}/sky_background{suffix}.png")
 
 
-def rawflux(flux, ferr, phase=None, good=None, folder=None,
-    sigrej=None, binsize=None, units='units'):
+def rawflux(
+        flux, ferr, phase, good=None, folder=None,
+        sigrej=None, binsize=None, units='units',
+    ):
     """
     Make raw flux plots (all individual frames, all frames without
     outliers, and binned frames).
@@ -164,9 +166,6 @@ def rawflux(flux, ferr, phase=None, good=None, folder=None,
     units: String
        Flux units.
     """
-    if phase is None:
-        phase = np.arange(len(y), int)
-
     # X-axis' range:
     dt = np.ptp(phase[good])
     xran = np.amin(phase[good]) - 0.025*dt, np.amax(phase[good]) + 0.025*dt
@@ -201,7 +200,7 @@ def rawflux(flux, ferr, phase=None, good=None, folder=None,
     plt.plot(phase[~good], flux[~good], ".", color="orange", zorder=0, ms=ms)
     plt.ylim(yran)
     plt.xlim(xran)
-    plt.ylabel(f"Raw flux without outliers ({untis})")
+    plt.ylabel(f"Raw flux without outliers ({units})")
     plt.xlabel('Orbital phase')
     if folder is not None:
         plt.savefig(f"{folder}/raw_flux_zoom.png")
@@ -224,53 +223,38 @@ def rawflux(flux, ferr, phase=None, good=None, folder=None,
         plt.savefig(f"{folder}/raw_flux_binned.png")
 
 
-def yxflux():
+def yxflux(x, y, flux, phase, good, position=None, folder=None):
     """
-    Doc me!
-    aplev = pup.fp.aplev
-    y = pup.fp.y
-    x = pup.fp.x
-    good = pup.fp.good
-    pos = pup.fp.pos
+    Plot flux vs X position, and flux vs Y position
     """
-    if pos is None:
-        pos = np.zeros(len(y), int)
+    if position is None:
+        position = np.zeros(len(y), int)
 
     if phase is None:
         phase = np.arange(len(y), int)
 
-    for j in np.unique(pos):
+    npos = len(np.unique(position))
+    for j in np.unique(position):
         # Append suffix to filename in case there is more than one position:
-        if npos > 1:
-            suffix = "_pos{:02d}".format(pos)
+        suffix = f"_pos{position:02d}" if npos > 1 else ''
 
-        ipos  = pos == j
-        igood = ipos &  good
-        ibad  = ipos & ~good
-        yy = y[ipos]
-        xx = x[ipos]
+        igood = (position == j) & good
+        #ibad = (position == j) & ~good
 
         plt.figure(502)
         plt.clf()
         plt.subplot(211)
-        plt.plot(y[igood], aplev[igood], "b.") #, binyapstd, fmt=fmt1[pos])
+        plt.plot(y[igood], flux[igood], "b.")
         plt.ylabel('Flux')
         plt.subplot(212)
-        plt.plot(x[igood], aplev[igood], "r.") #, binxapstd, fmt=fmt1[pos],
+        plt.plot(x[igood], flux[igood], "r.")
         plt.xlabel('Pixel Postion')
         plt.ylabel('Flux')
+        if folder is not None:
+            plt.savefig(f"{folder}/flux_vs_xy{suffix}.png")
 
 
-    plt.figure(504)
-    plt.errorbar(
-        binrr, binraplev, binrapstd, fmt=fmt1[pos], label=f'pos {pos}')
-    plt.title(pup.planetname + ' Radial Distance vs. Flux')
-    plt.xlabel('Distance From Center of Pixel')
-    plt.ylabel('Flux')
-    plt.legend(loc='best')
-
-
-def yxdensity(y, x, dy, dx, minpt=1):
+def yxdensity(y, x, dy, dx, aplev, minpt=1):
     """
     y = pup.fp.y
     x = pup.fp.x
@@ -330,4 +314,83 @@ def yxdensity(y, x, dy, dx, minpt=1):
     plt.ylabel("Y (pixels)")
     cb = plt.colorbar()
     cb.set_label("Median flux")
+
+
+def lightcurve(fit, pups, savefile=None, systematics='raw'):
+    for j,ipup in enumerate(fit.ipup):
+        pup = pups[ipup]
+        models = fit.mnames[j]
+
+        iflux = fit.models[j][0].pnames.index('flux')
+        sflux = fit.models[j][0].params[iflux]
+        astro_pars = np.copy(fit.models[j][0].params)
+        astro_pars[iflux] = 1.0
+        model_fit = fit.models[j][0](astro_pars)
+
+        ipflux = 1.0
+        if 'bliss' in models:
+            idx_bliss = models.index('bliss')
+            ipflux = fit.models[j][idx_bliss].ipflux
+
+        ramp = 1.0
+        for model in models:
+            if model.endswith('ramp'):
+                idx_ramp = models.index(model)
+                ramp = fit.models[j][idx_ramp](fit.models[j][idx_ramp].params)
+                break
+
+        data = pup.flux[fit.mask[j]]/sflux
+        uncert = pup.ferr[fit.mask[j]]/sflux
+        time = pup.time[fit.mask[j]]
+        bestfit = fit.bestfit[j]/sflux
+
+        if systematics == 'raw':
+            model_fit *= ipflux * ramp
+        elif systematics == 'ramp':
+            model_fit *= ramp
+            data /= ipflux
+            uncert /= ipflux
+            bestfit /= ipflux
+        elif systematics == 'corrected':
+            data /= ipflux*ramp
+            uncert /= ipflux*ramp
+            bestfit /= ipflux*ramp
+
+        binsize = int(fit.ndata[j]/pup.nbins)
+        binflux, binferr = mc3.stats.bin_array(data, binsize, uncert)
+        bintime = mc3.stats.bin_array(time, binsize)
+
+        col_bin = 'blue'
+        col_fit = 'orangered'
+        col_pt = to_rgba('0.65', alpha=0.45)
+        plt.figure(303, (7,6))
+        plt.clf()
+        plt.subplots_adjust(0.12, 0.12, 0.95, 0.95)
+        ax = plt.subplot(211)
+        ax.plot(time, data, ".", ms=3, color=col_pt)
+        ax.errorbar(bintime, binflux, binferr, fmt=".", color=col_bin, zorder=3)
+        #ax.plot(time, bestfit, color=col_fit, zorder=4)
+        ax.plot(time, model_fit, color=col_fit, zorder=4)
+        ax.set_ylabel("Normalized flux")
+        ax.tick_params(which='both', right=True, top=True, direction='in')
+        ax.set_xlim(np.amin(time), np.amax(time))
+
+        ax = plt.subplot(212)
+        ax.errorbar(bintime, binflux, binferr, fmt=".", color=col_bin, zorder=3)
+        #ax.plot(time, bestfit, color=col_fit, zorder=4)
+        ax.plot(time, model_fit, color=col_fit, zorder=4)
+        ylims = ax.get_ylim()
+        ax.plot(time, data, ".", ms=3, color=col_pt)
+        ax.tick_params(which='both', right=True, direction='in')
+        ax.set_ylim(ylims)
+        ax.set_xlim(np.amin(time), np.amax(time))
+        ax.set_xlabel("Orbital phase")
+        ax.set_ylabel("Normalized flux")
+        if savefile is not None:
+            if fit.npups > 1:
+                path, ext = os.path.splitext(savefile)
+                #savefile = savefile_lc.replace('_lc_', f'_pup{j}_lc_')
+                plt.savefig(f'{path}_pup{j:02}{ext}', dpi=300)
+            else:
+                plt.savefig(savefile, dpi=300)
 
